<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.a480.fernando.hackathon.FeedBackActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/app_bar"
                layout="@layout/toolbar"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:textStyle="bold"
                android:textColor="@color/darkGrey"
                android:text="@string/suggestions"
                android:textSize="20sp"
                android:layout_weight="0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/suggestion_text"
                    android:hint="@string/suggestion_hint"
                    android:textColor="@color/lightGrey"
                    android:textColorHint="@color/lightGrey"
                    android:gravity="top"
                    android:layout_weight="0.9"/>

                <Button
                    android:id="@+id/send_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/send"
                    android:background="@drawable/button"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/buttonText"
                    android:layout_weight="0.1"
                    android:onClick="sendFeedback"/>
            </LinearLayout>
        </LinearLayout>
</android.support.v4.widget.DrawerLayout>