<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.a480.fernando.hackathon.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/app_bar"
                layout="@layout/toolbar"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gradient_home_image"
                    android:background="@drawable/portada"/>

                <Button
                    android:id="@+id/inscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:text="@string/inscription_button"
                    android:background="@drawable/button"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/buttonText"
                    android:layout_alignParentBottom="true"
                    android:onClick="inscription"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/mas_info"/>

            <TextView
                android:id="@+id/hackathon_title_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/home_title"
                android:textColor="@color/darkGrey"
                android:textSize="18sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/hackathon_subtitle_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_subtitle"
                android:textColor="@color/darkGrey"
                android:textSize="18sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"/>

            <WebView
                android:id="@+id/web_view_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGrey"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">
            </WebView>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
